// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exit argument 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Exit {
        "kind": "exit",
        "status": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "useDie": false,
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`exit die 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Exit {
        "kind": "exit",
        "status": null,
        "useDie": true,
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`exit simple 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Exit {
        "kind": "exit",
        "status": null,
        "useDie": false,
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
